AC_PREREQ(2.52)

AC_INIT(network-manager-netbook, 1.7, tambet@novell.com, network-manager-netbook)
AM_INIT_AUTOMAKE([-Wall -Werror foreign no-dist-gzip dist-bzip2])
AM_MAINTAINER_MODE

AC_CONFIG_HEADERS(config.h)

# Enable silent build when available (Automake 1.11)
m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

dnl Required programs
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_LIBTOOL

dnl translation support
GETTEXT_PACKAGE=network-manager-netbook
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package])
IT_PROG_INTLTOOL([0.35.0])
AM_GLIB_GNU_GETTEXT

NM_REQUIRED=0.7.996

PKG_CHECK_MODULES(LIBNM_GTK, gtk+-2.0 gconf-2.0 gnome-keyring-1 libnm-util >= $NM_REQUIRED libnm-glib >= $NM_REQUIRED mobile-broadband-provider-info)

PKG_CHECK_MODULES(NMN, dbus-glib-1 >= 0.75 gtk+-2.0 gconf-2.0 gnome-keyring-1 libnotify libnm-util >= $NM_REQUIRED libnm-glib >= $NM_REQUIRED moblin-panel nbtk-gtk-1.2)

dnl Check for gnome-bluetooth
PKG_CHECK_MODULES(GNOME_BLUETOOTH,
		  gconf-2.0
		  gnome-bluetooth-1.0 >= 2.27.6
		  libnm-util
		  libnm-glib,
		  have_gbt=yes, have_gbt=no)
AM_CONDITIONAL(HAVE_GBT, test x"$have_gbt" = "xyes")

GLIB_GENMARSHAL=`pkg-config --variable=glib_genmarshal glib-2.0`
AC_SUBST(GLIB_GENMARSHAL)

AC_CONFIG_FILES([
Makefile
gnome-bluetooth/Makefile
icons/Makefile
icons/22/Makefile
icons/32/Makefile
icons/48/Makefile
libnm-gtk/Makefile
libnm-gtk/wireless-security/Makefile
po/Makefile.in
marshallers/Makefile
src/Makefile
])
AC_OUTPUT
