SUBDIRS = 22 32 48

iconsdir = $(pkgdatadir)/icons

icons_DATA = \
	nm-device-wired-active.png \
	nm-device-wired-normal.png \
	nm-device-wwan-active.png \
	nm-device-wwan-normal.png \
	nm-no-connection-active.png \
	nm-no-connection-normal.png \
	nm-progress-working-01-active.png \
	nm-progress-working-01-normal.png \
	nm-progress-working-02-active.png \
	nm-progress-working-02-normal.png \
	nm-progress-working-03-active.png \
	nm-progress-working-03-normal.png \
	nm-progress-working-04-active.png \
	nm-progress-working-04-normal.png \
	nm-progress-working-05-active.png \
	nm-progress-working-05-normal.png \
	nm-progress-working-06-active.png \
	nm-progress-working-06-normal.png \
	nm-signal-00-active.png \
	nm-signal-00-normal.png \
	nm-signal-100-active.png \
	nm-signal-100-normal.png \
	nm-signal-25-active.png \
	nm-signal-25-normal.png \
	nm-signal-50-active.png \
	nm-signal-50-normal.png \
	nm-signal-75-active.png \
	nm-signal-75-normal.png \
	toolbar-button-active.png \
	toolbar-button-hover.png

EXTRA_DIST = $(icons_DATA)
